--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "gatsby": "^2.0.0",
     "gatsby-image": "^2.0.10",
     "gatsby-plugin-gtag": "^1.0.4",
+    "gatsby-plugin-manifest": "^2.0.11",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-netlify-cms": "^3.0.0",
+    "gatsby-plugin-offline": "^2.0.18",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
-    "gatsby-plugin-sharp": "^2.0.13",
+    "gatsby-plugin-sharp": "^2.0.14",
     "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-remark-images": "^2.0.1",
     "gatsby-remark-relative-images": "^0.2.0",
