--- a/package.json
+++ b/package.json
@@ -2,35 +2,37 @@
   "name": "gatsby-starter-netlify-cms",
   "description": "Example Gatsby, and Netlify CMS project",
   "version": "1.1.3",
-  "author": "Austin Green",
+  "author": "M150",
   "dependencies": {
-    "bulma": "^0.7.0",
-    "gatsby": "^2.0.0",
-    "gatsby-image": "^2.0.10",
+    "bulma": "^0.7.2",
+    "gatsby": "^2.0.64",
+    "gatsby-image": "^2.0.22",
     "gatsby-plugin-gtag": "^1.0.4",
     "gatsby-plugin-manifest": "^2.0.11",
-    "gatsby-plugin-netlify": "^2.0.0",
-    "gatsby-plugin-netlify-cms": "^3.0.0",
-    "gatsby-plugin-offline": "^2.0.18",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.1",
-    "gatsby-plugin-sharp": "^2.0.14",
-    "gatsby-plugin-sitemap": "^2.0.2",
-    "gatsby-remark-images": "^2.0.1",
-    "gatsby-remark-relative-images": "^0.2.0",
-    "gatsby-source-filesystem": "^2.0.1",
-    "gatsby-transformer-remark": "^2.1.1",
-    "gatsby-transformer-sharp": "^2.1.1",
-    "lodash": "^4.17.5",
-    "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms": "^2.1.1",
-    "node-sass": "^4.9.2",
-    "parcel-bundler": "^1.9.4",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.4.1",
+    "gatsby-plugin-netlify": "^2.0.6",
+    "gatsby-plugin-netlify-cms": "^3.0.9",
+    "gatsby-plugin-offline": "^2.0.19",
+    "gatsby-plugin-react-helmet": "^3.0.4",
+    "gatsby-plugin-sass": "^2.0.7",
+    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-sitemap": "^2.0.3",
+    "gatsby-remark-images": "^3.0.1",
+    "gatsby-remark-relative-images": "^0.2.1",
+    "gatsby-source-filesystem": "^2.0.11",
+    "gatsby-transformer-remark": "^2.1.15",
+    "gatsby-transformer-sharp": "^2.1.9",
+    "lodash": "^4.17.11",
+    "lodash-webpack-plugin": "^0.11.5",
+    "mapbox-gl": "^0.52.0-beta.1",
+    "netlify-cms": "^2.3.0",
+    "node-sass": "^4.10.0",
+    "parcel-bundler": "^1.10.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
-    "uuid": "^3.2.1"
+    "react-map-gl": "^4.0.5",
+    "uuid": "^3.3.2"
   },
   "keywords": [
     "gatsby"
@@ -47,7 +49,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.7.4",
+    "prettier": "^1.15.3",
     "rimraf": "^2.6.2"
   }
 }
